--- a/index.html
+++ b/index.html
@@ -359,10 +359,8 @@
                         </a>
                     </div>
                     <div class="col-lg-7 bottommargin">
-                        <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                            <img src="images/HOME.jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
-                            <!-- <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome"> -->
-                            <!-- <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad"> -->
+                        <div style="position: relative; margin-bottom: -50px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
+                            <img src="images/PG/MARKETING.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
                         </div>
                     </div>
                 </div>
@@ -512,7 +510,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/WEB.jpg" alt="">
+                            <img src="images/servicios/web1.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
@@ -527,7 +525,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/DISEÑO GRAFICO.jpg" alt="">
+                            <img src="images/servicios/grafico1.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Gráfico Profesional</h3>
@@ -542,7 +540,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/MARKETING.jpg" alt="">
+                            <img src="images/servicios/marketing1.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Marketing Digital</h3>
@@ -557,7 +555,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/SEO.jpg" alt="">
+                            <img src="images/servicios/seo1.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>SEO</h3>
