--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/web.jpg" alt="">
+                            <img src="images/servicios/web.jpg" alt="Diseño Web Profesional">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
