--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/web.jpg" alt="Diseño Web Profesional">
+                            <img src="images/servicios/disenoweb.jpg" alt="Diseño Web Profesional">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
@@ -525,7 +525,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/grafico.jpg" alt="">
+                            <img src="images/servicios/disenografico.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Gráfico Profesional</h3>
@@ -540,7 +540,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/marketing.jpg" alt="">
+                            <img src="images/servicios/marketingdigital.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Marketing Digital</h3>
@@ -555,7 +555,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/seo.jpg" alt="">
+                            <img src="images/servicios/seoprueba.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>SEO</h3>
