--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </div>
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
-                <div class="row clearfix">
+                <div class="row clearfix" style="margin-bottom: 130px">
                     <div class="col-lg-5">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
                             <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
@@ -358,13 +358,10 @@
                             <span>Nosotros</span>
                         </a>
                     </div>
-                    <div class="col-lg-7 bottommargin">
-                        <div style="position: relative; margin-bottom: -50px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                            <img src="images/PG/MARKETING.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
-                        </div>
+                    <div class="col-lg-7">
+                        <img src="images/iphone-3d.png" style="height: 520px; position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
                     </div>
                 </div>
-                <div class="line topmargin-lg"></div>
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
                         <div class="feature-box fbox-center fbox-effect">
