--- a/nosotros.html
+++ b/nosotros.html
@@ -359,9 +359,9 @@
                      <span>Contáctanos</span>
                   </a>
                </div>
-               <div class="col-lg-7 bottommargin">
+               <div class="col-lg-7">
                   <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                     <img src="images/PG/WEB.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+                     <img src="images/nosotros/3..jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
                   </div>
                </div>
             </div>
@@ -419,7 +419,7 @@
             <div class="row clearfix">
                <div class="col-lg-7">
                   <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                     <img src="images/PG/GRAFICO.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+                     <img src="images/nosotros/2..jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
                   </div>
                </div>
                <div class="col-lg-5">
