--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </div>
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
-                <div class="row clearfix" style="margin-bottom: 130px">
+                <div class="row clearfix" style="margin-bottom: 140px">
                     <div class="col-lg-5">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
                             <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
@@ -359,7 +359,7 @@
                         </a>
                     </div>
                     <div class="col-lg-7">
-                        <img src="images/iphone-3d.png" style="height: 520px; position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
+                        <img src="images/nosotros/2.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
                     </div>
                 </div>
                 <div class="row">
