--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
                             <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
                         </div>
-                        <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
+                        <p class="lead">Sabemos que un sitio web es la mejor forma para llegar a cualquier lugar, pero no cualquier sitio web asegura el éxito de tu empresa o compañía.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
                             <i class="icon-line-arrow-right"></i>
                             <span>Nosotros</span>
@@ -511,7 +511,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
-                            <p>Uniquely plagiarize dynamic convergence after equity invested experiences. Holisticly repurpose installed base infomediaries before web-enabled methods of empowerment.</p>
+                            <p>Trabajamos contigo, para ofrecerte el sitio web e identidad que tu negocio necesita, buscando un diseño único e impactante para tus clientes.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-web.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -526,7 +526,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Gráfico Profesional</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor mollitia dignissimos, assumenda consequuntur consectetur! Laborum reiciendis, accusamus possimus et similique nisi obcaecati ex doloremque ea odio.</p>
+                            <p>Conocemos la filosofía de cada marca creando los mejores diseños para potenciar la identidad de tu organización, empresa o compañía. </p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-grafico.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Marketing Digital</h3>
-                            <p>Dolor mollitia dignissimos, assumenda consequuntur consectetur! Laborum reiciendis, error explicabo consectetur adipisci, accusamus possimus et similique nisi obcaecati ex doloremque ea odio.</p>
+                            <p>Desarrolla de la mano de CreativosPlus en el área de marketing digital estrategias y soluciones que te permitan alcanzar las metas de tu negocio.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="marketing.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -556,7 +556,7 @@
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>SEO</h3>
-                            <p>Dolor mollitia dignissimos, assumenda consequuntur consectetur! Laborum reiciendis, error explicabo consectetur adipisci, accusamus possimus et similique nisi obcaecati ex doloremque ea odio.</p>
+                            <p>Una marca posicionada es una marca exitosa, Creativosplus lo hace de manera orgánica creando estrategias para potenciar tu marca en todos los buscadores.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="seo.html">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Ver más</span>
@@ -604,8 +604,8 @@
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 200px">
                                         <blockquote class="blockquote border-0 mb-0">
-                                            <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
-                                            <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
+                                            <p class="mb-3 text-white">"La idea no es vivir para siempre, es crear algo que sí lo haga."</p>
+                                            <footer class="blockquote-footer text-white-50 font-italic">Andy Warhol</footer>
                                         </blockquote>
                                     </div>
                                 </li>
