--- a/diseno-web.html
+++ b/diseno-web.html
@@ -354,10 +354,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Plug into the</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">NextGen Framework</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Diseño web para empresas</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Diseñamos y creamos presencia en internet de manera efectiva con tu imagen corporativa, teniendo en cuenta tus objetivos empresariales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -372,10 +371,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Retina Ready ~ 534 PPI</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Stunning Graphics</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Tiendas Virtuales</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Llevamos tu tienda física al mundo online con las mejores opciones del mercado, no importa si tu empresa es pequeña o grande, creamos soluciones efectivas para tu negocio o empresa.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,10 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Privacy Protected</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Secured Solutions</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño web</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
