--- a/marketing.html
+++ b/marketing.html
@@ -354,10 +354,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Plug into the</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">NextGen Framework</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de marketing digital</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -372,10 +371,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Retina Ready ~ 534 PPI</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Stunning Graphics</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Social media</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,10 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Privacy Protected</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Secured Solutions</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Analítica digital</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
