--- a/nosotros.html
+++ b/nosotros.html
@@ -536,10 +536,10 @@
                      <div class="toggle faq">
                         <div class="togglet texto-azul">
                            <i class="toggle-closed icon-smile1 texto-verde"></i>
-                           <i class="toggle-open icon-credit texto-verde"></i>
-                           
+                           <i class="toggle-open icon-smile1 texto-verde"></i>
+                           ¿Como realizan los logotipos?
                         </div>
-                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Realizamos bocetos e ilustraciones para encontrar el ADN de tu negocio convirtiéndolo en un formato digital que represente la identidad deseada. </div>
                      </div>
                   </div>
                </div>
