--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -354,10 +354,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Plug into the</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">NextGen Framework</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Logotipos</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Conocemos que esta es la parte más importante de su negocio, su imagen corporativa y creativa al mundo, Creativosplus logra encontrar su identidad con un diseño a la medida.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -372,10 +371,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Retina Ready ~ 534 PPI</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Stunning Graphics</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Identidad corporativa</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Transmitimos por medio de componentes físicos y digitales el concepto de tu negocio, con tu identidad corporativa lograremos darle valor a tu marca.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,10 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Privacy Protected</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Secured Solutions</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos y animación</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
