--- a/seo.html
+++ b/seo.html
@@ -354,10 +354,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Plug into the</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">NextGen Framework</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Optimización</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Realizamos su adecuada optimización a su sitio web teniendo en cuenta las etiquetas HTML necesarias para sus texto e imágenes.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -372,10 +371,9 @@
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Retina Ready ~ 534 PPI</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Stunning Graphics</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Palabras claves</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Elaboramos una estrategia de posicionamiento, escogiendo palabras claves que su negocio o compañía necesite.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
@@ -394,10 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <span class="before-heading">Privacy Protected</span>
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Secured Solutions</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">linkbuilding</h2>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
+                        <p class="lead">Para mejorar la optimización se crean links internos y externos de jerarquía obteniendo calidad en la navegación y resultado del sitio web.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
