--- a/seo.html
+++ b/seo.html
@@ -392,9 +392,9 @@
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">linkbuilding</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Linkbuilding</h2>
                         </div>
-                        <p class="lead">Para mejorar la optimización se crean links internos y externos de jerarquía obteniendo calidad en la navegación y resultado del sitio web.</p>
+                        <p class="lead">Para mejorar la optimización se crean links internos y externos de jerarquía obteniendo calidad en la navegación y resultados del sitio web.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
