--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                             <span>Nosotros</span>
                         </a>
                     </div>
-                    <div class="col-lg-7">
-                        <img src="images/nosotros/2.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
+                    <div class="col-lg-7" style="margin-top: -50px">
+                        <img src="images/nosotros/1.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
                     </div>
                 </div>
                 <div class="row">
