--- a/trabajos.html
+++ b/trabajos.html
@@ -255,7 +255,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/portafolio.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/portafolio.png" alt="" data-ww="['750px','750px','750px','750px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -356,10 +356,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/gallery/jjsolutions.jpg');"></a>
+                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/portafolio/web/jjsolutions.jpg');"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/gallery/addictivebeautyspa.jpg');"></a>
+                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/portafolio/web/addictivebeautyspa.jpg');"></a>
                                 </li>
                             </ul>
                             <ul class="carousel-column column-2">
@@ -372,10 +372,10 @@
                                     </div>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/gallery/serviplotca.jpg'); min-height: 300px"></a>
+                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/portafolio/web/serviplotca.jpg'); min-height: 300px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/gallery/wayf.jpg'); min-height: 380px"></a>
+                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/portafolio/web/wayf.jpg'); min-height: 380px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -384,10 +384,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/gallery/blg.jpg'); min-height: 500px"></a>
+                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/portafolio/web/blg.jpg'); min-height: 500px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/gallery/drycleaning.jpg'); min-height: 405px"></a>
+                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/portafolio/web/drycleaning.jpg'); min-height: 405px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -418,25 +418,31 @@
                 <div class="heading-block center">
                     <h2>Últimos diseños realizados, conoce la calidad de ellos.</h2>
                 </div>
-                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
+                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="portafolio">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="images/gallery/1.jpg" data-lightbox="image" class="item" style="background-image: url('images/gallery/1.jpg');"></a>
-                                </li>
-                            </ul>
-                            <ul class="carousel-column column-2">
-                                <li class="carousel-grid-item">
-                                    <a href="images/gallery/4.jpg" data-lightbox="image" class="item" style="background-image: url('images/gallery/4.jpg'); min-height: 280px"></a>
+                                    <a href="images/portafolio/grafico/3.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/3.jpg'); min-height: 340px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 480px">
+                                    <a href="images/portafolio/grafico/2.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/2.jpg'); min-height: 320px"></a>
+                                </li>
+                                <li class="carousel-grid-item">
+                                    <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 280px">
                                         <blockquote class="blockquote border-0 mb-0">
                                             <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
                                             <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
                                         </blockquote>
                                     </div>
+                                </li>
+                            </ul>
+                            <ul class="carousel-column column-2">
+                                <li class="carousel-grid-item">
+                                    <a href="images/portafolio/grafico/3-1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/3-1.jpg'); min-height: 380px"></a>
+                                </li>
+                                <li class="carousel-grid-item">
+                                    <a href="images/portafolio/grafico/2-1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/2-1.jpg'); min-height: 280px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -445,10 +451,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="images/gallery/5.jpg" data-lightbox="image" class="item" style="background-image: url('images/gallery/5.jpg'); min-height: 310px"></a>
+                                    <a href="images/portafolio/grafico/1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/1.jpg'); min-height: 550px; min-height: 550px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="images/gallery/6.jpg" data-lightbox="image" class="item" style="background-image: url('images/gallery/6.jpg'); min-height: 450px"></a>
+                                    <a href="images/portafolio/grafico/1-2.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/1-2.jpg'); min-height: 415px"></a>
                                 </li>
                             </ul>
                         </div>
