--- a/diseno-web.html
+++ b/diseno-web.html
@@ -254,7 +254,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/web.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -348,13 +348,13 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-7 center">
+                    <div class="col-lg-5 center">
                         <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Diseño web para empresas</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Diseño Web para Empresas</h2>
                         </div>
                         <p class="lead">Diseñamos y creamos presencia en internet de manera efectiva con tu imagen corporativa, teniendo en cuenta tus objetivos empresariales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -368,7 +368,7 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-5">
+                    <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Tiendas Virtuales</h2>
@@ -379,7 +379,7 @@
                             <span>Contáctanos</span>
                         </a>
                     </div>
-                    <div class="col-lg-7 center">
+                    <div class="col-lg-5 center">
                         <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
@@ -388,11 +388,11 @@
         <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
-                    <div class="col-lg-5 offset-lg-6">
+                    <div class="col-lg-7 offset-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño web</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño Web</h2>
                         </div>
                         <p class="lead">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
