--- a/marketing.html
+++ b/marketing.html
@@ -254,7 +254,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/marketing.png" alt="" data-ww="['1000px','1000px','1000px','1000px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -348,13 +348,13 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-7 center">
+                    <div class="col-lg-5 center">
                         <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de marketing digital</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de Marketing Digital</h2>
                         </div>
                         <p class="lead">buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -368,10 +368,10 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-5">
+                    <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Social media</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Social Media</h2>
                         </div>
                         <p class="lead">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -379,7 +379,7 @@
                             <span>Contáctanos</span>
                         </a>
                     </div>
-                    <div class="col-lg-7 center">
+                    <div class="col-lg-5 center">
                         <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
@@ -388,11 +388,11 @@
         <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
-                    <div class="col-lg-5 offset-lg-6">
+                    <div class="col-lg-7 offset-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Analítica digital</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Analítica Digital</h2>
                         </div>
                         <p class="lead">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
